fix(annex editor): Don’t wrap lines in cell contents

--- a/src/renderer/issue-editor/annexes/styles.scss
+++ b/src/renderer/issue-editor/annexes/styles.scss
@@ -60,6 +60,7 @@
   }
   .datasetContentsCell {
     padding: ($pt-grid-size / 2) $pt-grid-size;
+    white-space: nowrap;
 
     .unsupportedField {
       color: $pt-text-color-disabled;
